fix: remove double scrollbar issue on small displays

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,11 @@ body {
     background-color: #907860;
     background-size: cover;
     font-family: "Fondamento", cursive, sans-serif;
-    overflow-x: hidden;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
-    margin: 0;
     min-height: 100vh;
+    margin: 0;
 }
 
 main {
